--- a/pom.xml
+++ b/pom.xml
@@ -314,13 +314,13 @@
                 <!--Justification: Logback implementation for SLF4J, provides logging capabilities -->
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.5.17</version>
+                <version>${logback.version}</version>
             </dependency>
             <dependency>
                 <!--Justification: Core library for Logback, necessary for logging configurations and functionality -->
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
-                <version>1.5.17</version>
+                <version>${logback.version}</version>
             </dependency>
             <dependency>
                 <!--Justification: Allows the use of SLF4J API with legacy Commons Logging applications -->
@@ -1055,6 +1055,7 @@
     <properties>
         <jdbcproc.version>1.1-25</jdbcproc.version>
         <slf4j.version>2.0.17</slf4j.version>
+        <logback.version>1.5.17</logback.version>
         <spring.version>6.2.2</spring.version>
         <spring.security.version>6.4.3</spring.security.version>
         <aspectj.version>1.6.5</aspectj.version>
