--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -269,6 +269,10 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.payneteasy.superfly.web.StartSuperfly</mainClass>
+                                    <manifestEntries>
+                                        <Implementation-Title>ch.qos.logback</Implementation-Title>
+                                        <Implementation-Version>${logback.version}</Implementation-Version>
+                                    </manifestEntries>
                                 </transformer>
                                 <!-- Объединяем содержимое файлов META-INF/services/* -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
