--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -240,4 +240,10 @@
         <location>/error-500.htm</location>
     </error-page>
 
+    <resource-ref>
+        <res-ref-name>jdbc/superfly</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
